--- a/MusicApp/app/src/main/AndroidManifest.xml
+++ b/MusicApp/app/src/main/AndroidManifest.xml
@@ -7,8 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainActivity">
+        android:theme="@style/AppTheme"
+        >
+        <activity
+            android:name=".Activities.MainActivity"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -16,14 +19,28 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Activities.ArtistsActivity" android:parentActivityName=".Activities.MainActivity"/>
-        <activity android:name=".Activities.ArtistDetailActivity" android:parentActivityName=".Activities.ArtistsActivity"/>
-        <activity android:name=".Activities.SearchActivity" android:parentActivityName=".Activities.MainActivity"/>
-        <activity android:name=".Activities.BaseListViewActivity" android:parentActivityName=".Activities.MainActivity"/>
-        <activity android:name=".Activities.FavoriteSongsActivity" android:parentActivityName=".Activities.MainActivity"/>
+        <activity
+            android:name=".Activities.ArtistsActivity"
+            android:parentActivityName=".Activities.MainActivity"/>
+        <activity
+            android:name=".Activities.ArtistDetailActivity"
+            android:parentActivityName=".Activities.ArtistsActivity"/>
+        <activity
+            android:name=".Activities.SearchActivity"
+            android:parentActivityName=".Activities.MainActivity"/>
+        <activity
+            android:name=".Activities.BaseListViewActivity"
+            android:parentActivityName=".Activities.MainActivity"/>
+        <activity
+            android:name=".Activities.FavoriteSongsActivity"
+            android:parentActivityName=".Activities.MainActivity"/>
         <activity android:name=".Activities.PlayerActivity"/>
-        <activity android:name=".Activities.PlaylistDetailActivity" android:parentActivityName=".Activities.PlaylistsActivity"/>
-        <activity android:name=".Activities.PlaylistsActivity" android:parentActivityName=".Activities.MainActivity"/>
+        <activity
+            android:name=".Activities.PlaylistDetailActivity"
+            android:parentActivityName=".Activities.PlaylistsActivity"/>
+        <activity
+            android:name=".Activities.PlaylistsActivity"
+            android:parentActivityName=".Activities.MainActivity"/>
     </application>
 
 </manifest>
